# spatial-model-lda

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  apptainer.def  pyproject.toml
scripts/: analysis_config.yaml  local_config.yaml.example  simple_classification.py
spatialmodel_lda/: __init__.py
spatialmodel_lda/benchmark/: __init__.py  evaluations.py  p300.py  utils.py
spatialmodel_lda/classification/: __init__.py  covariance.py  covariance_modeling.py  feature_preprocessing.py  fit_functions.py  matrix_distances.py  shrinkage_lda.py  spatial_model_lda.py
