[tool.poetry]
name = "spatial-model-lda"
version = "0.1.0"
description = "Code from my master thesis for an LDA classifier using spatial models of the EEG covariance matrix as a shrinkage target."
authors = ["Christian Cameron <chris.cameron0@googlemail.com>"]
readme = "README.md"
packages = [{include = "spatialmodel_lda"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
jinja2 = "^3.1.2"
matplotlib = "^3.7"
moabb = "^0.4.6"
mne = "^1.3.1"
#pyriemann = "^0.4"
numpy = "1.23.5"
pandas = "^1.5.3"
PyYAML = "^5.4.1"
scikit-learn= "^1.0.1"
scipy = "1.10.0"
seaborn = "^0.12.2"
tqdm = "^4.64"
vg = "^2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
